fix: change to text align center

--- a/assets/section-statistics-fact.scss
+++ b/assets/section-statistics-fact.scss
@@ -35,7 +35,7 @@
 .statistics-fact {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	text-align: center;
 	width: 50%;
 
 	@media (min-width: 825px) {
